--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "monorepo-example",
+  "name": "gw-monorepo-example",
   "private": true,
   "scripts": {
     "build": "turbo run build",
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "prettier": "^3.7.4",
+    "tsdown": "^0.20.1",
     "turbo": "^2.8.1",
     "typescript": "5.9.2"
   },
