--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,7 +1,23 @@
 {
   "extends": "@repo/typescript-config/react-library.json",
   "compilerOptions": {
-    "outDir": "dist"
+"jsx": "react-jsx",
+
+    "declaration": true,
+    "declarationMap": true,
+    "emitDeclarationOnly": false,
+
+    "outDir": "dist",
+    "rootDir": "src",
+
+    "moduleResolution": "Bundler",
+    "module": "ESNext",
+    "target": "ES2020",
+
+    "strict": true,
+    "skipLibCheck": true,
+
+    "types": ["react", "react-dom"]
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
